tests/invalid/Remainder_Invalid_3.whiley
function f(bool x, bool y) -> int:
    return x % y
